--- a/CodeInOneFile/CodeInOneFile.csproj
+++ b/CodeInOneFile/CodeInOneFile.csproj
@@ -89,5 +89,9 @@
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="1.png" />
+    <Resource Include="2.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
